test/libyul/yulSyntaxTests/if_statement_fail_1.yul
{ if let x {} }
// ----
// ParserError 1856: (5-8): Literal or identifier expected.
